# lc3_kernel

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
lc3_kernel/: __init__.py  __main__.py  kernel.py
notebooks/: LC3-Kernel.ipynb  Lab01.ipynb
