[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name = "lc3-kernel"
dynamic = [
    "version",
]
description = "LC-3 kernel for Jupyter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Allan Knight", email = "allan.knight@ucr.edu" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "jupyter_client",
]

[project.optional-dependencies]
test = [
  "jupyter_kernel_test",
]

[project.urls]
Homepage = "https://github.com/jupyter/echo_kernel"

[tool.hatch.version]
path = "lc3_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]


[tool.hatch.build.targets.sdist]
include = [
    "/lc3_kernel",
]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"
